# telegram_bot_ai

./: .gitignore  Dockerfile  Makefile  docker-build.sh  docker-compose.yml  pyproject.toml  requirements.txt
sources/: run_bot.py
sources/telegram/: __init__.py  backends.py  dataobjects.py
telegram/: backends.py  config.yml
