[tool.poetry]
name = "telegram_bot_ai"
version = "0.0.0" # FIXME: Укажи свою версию здесь.
description = "" # FIXME: Укажи сове описание здесь.
authors = ["Ar4ikov <bizy18588@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "^4.6.0"
PyYAML = "^6.0"
sqlmodel = "^0.0.6"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
